[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Credits.gd" type="Script" id=1]
[ext_resource path="res://Sounds/SFX/hover.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/SFX/click.wav" type="AudioStream" id=3]

[node name="CreditsMenu" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Programmers" type="Node" parent="UI"]

[node name="ProgrammersLabel" type="Label" parent="UI/Programmers"]
margin_left = 16.3164
margin_top = 19.9762
margin_right = 433.316
margin_bottom = 37.9762
rect_scale = Vector2( 0.14, 0.14 )
text = "Programmers"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Guilherme" type="Label" parent="UI/Programmers"]
anchor_left = -5.96046e-09
margin_left = 16.3164
margin_top = 24.8962
margin_right = 433.316
margin_bottom = 42.8962
rect_scale = Vector2( 0.14, 0.14 )
text = "Guilherme de Souza Silva"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gustavo" type="Label" parent="UI/Programmers"]
anchor_left = -5.96046e-09
margin_left = 16.3164
margin_top = 30.8162
margin_right = 433.316
margin_bottom = 48.8162
rect_scale = Vector2( 0.14, 0.14 )
text = "Gustavo de Souza Silva"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ArtContainer" type="GridContainer" parent="UI"]
margin_left = 44.5871
margin_top = 38.8175
margin_right = 560.587
margin_bottom = 149.817
rect_scale = Vector2( 0.14, 0.14 )
custom_constants/vseparation = 13
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ArtistsLabel" type="Label" parent="UI/ArtContainer"]
margin_right = 435.0
margin_bottom = 18.0
text = "Artists"
align = 1

[node name="Myiano" type="Label" parent="UI/ArtContainer"]
margin_top = 31.0
margin_right = 435.0
margin_bottom = 49.0
text = "Mateus Naoto Miyano"
align = 1

[node name="Victor" type="Label" parent="UI/ArtContainer"]
margin_top = 62.0
margin_right = 435.0
margin_bottom = 80.0
text = "Victor Lopes da Silva"
align = 1

[node name="Label" type="Label" parent="UI/ArtContainer"]
margin_top = 93.0
margin_right = 435.0
margin_bottom = 111.0
text = "William Carvalho da Costa"
align = 1

[node name="LdJam" type="Label" parent="UI"]
margin_left = 51.3891
margin_top = 3.65976
margin_right = 432.389
margin_bottom = 21.6598
rect_scale = Vector2( 0.16, 0.16 )
text = "Made for LudumDare #46"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="GridContainer" parent="UI"]
margin_left = 96.2211
margin_top = 59.166
margin_right = 446.221
margin_bottom = 104.166
rect_scale = Vector2( 0.14, 0.14 )
custom_constants/vseparation = 9
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="UI/Sound"]
margin_right = 350.0
margin_bottom = 18.0
text = "Sounds"
align = 1

[node name="Alex" type="Label" parent="UI/Sound"]
margin_top = 27.0
margin_right = 350.0
margin_bottom = 45.0
text = "Alex Cl√°udio Ramires	"
align = 1

[node name="backButton" type="LinkButton" parent="UI"]
margin_left = -93.9337
margin_top = 82.192
margin_right = 14.0663
margin_bottom = 100.192
rect_scale = Vector2( 0.18, 0.18 )
rect_pivot_offset = Vector2( 199.113, -1.86945 )
text = "VOLTAR"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="HoverSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
[connection signal="mouse_entered" from="UI/backButton" to="." method="_on_backButton_mouse_entered"]
[connection signal="pressed" from="UI/backButton" to="." method="_on_backButton_pressed"]
